--- a/.eslintrc
+++ b/.eslintrc
@@ -54,7 +54,7 @@
     "no-caller": 2,
     "no-catch-shadow": 0,
     "no-cond-assign": 2,
-    "no-console": 1,
+//    "no-console": 1,
     "no-constant-condition": 2,
     "no-control-regex": 2,
     "no-debugger": 2,
@@ -141,11 +141,11 @@
     "block-scoped-var": 0,
     "brace-style": [0, "1tbs"],
     "camelcase": 2,
-    "comma-dangle": [2, always-multiline],
+//    "comma-dangle": [2, always-multiline],
     "comma-spacing": 2,
     "comma-style": 0,
     "complexity": [0, 11],
-    "consistent-return": 2,
+    "consistent-return": 1,
     "consistent-this": [0, "that"],
     "curly": [2, "all"],
     "default-case": 0,
@@ -174,7 +174,7 @@
     "quote-props": 0,
     "quotes": [0, "double"],
     "radix": 0,
-    "semi": 2,
+//    "semi": 2,
     "semi-spacing": [2, {"before": false, "after": true}],
     "sort-vars": 0,
     "space-before-blocks": [0, "always"],
